--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,4 +23,8 @@ const { title } = Astro.props;
 	html {
 		font-family: system-ui, sans-serif;
 	}
+	body {
+		margin: 0;
+		overflow-x: hidden;
+	}
 </style>
