--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -21,11 +21,13 @@ const TIMESTAMP = 1727271000000;
       <span>Segundos</span>
     </div>
   </div>
-  <article>
-    <img class="icon" src="/icono-corazon.svg" alt="icono de corazon" />
+  <article class="text">
+    <img class="icon" src="/corazones.png" alt="icono de corazon" />
     <p>
-      Queremos celebrar junto a ti este momento tan especial para nosotros...
+      Nos conocimos de la manera más inesperada.
+      Nos enamoramos cita tras cita, vivimos momentos inolvidables, y ahora ha llegado el día en que daremos el "¡Sí, quiero!".
     </p>
+    <span> ¡NOS CASAMOS! <span>
   </article>
 </section>
 
@@ -57,7 +59,7 @@ const TIMESTAMP = 1727271000000;
     border-radius: 100%;
   }
 
-  span {
+  span, p {
     font-family: "Times New Roman", Times, serif;
     font-size: x-small;
     color: #565656;
@@ -74,6 +76,9 @@ const TIMESTAMP = 1727271000000;
     text-align: center;
     font-family: "Times New Roman", Times, serif;
     font-size: small;
+  }
+  .text {
+    max-width: 600px;
   }
 
   /* SIZE FOR 640px */
