--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import ChevronDown from "../icons/Chevron-down.astro";
 ---
 
 <section class="hero">
-    <img src="/logo-portada.png" alt="">
+    <img src="/titulo-portada.png" alt="">
     <ChevronDown/>
 </section>
 <style>
