--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Countdown from "../components/Countdown.astro";
 import Events from "../components/Events.astro";
+import Confirmation from "../components/Confirmation.astro";
 ---
 
 <Layout title="Welcome to Wedding">
@@ -10,5 +11,6 @@ import Events from "../components/Events.astro";
     <Hero />
     <Countdown />
     <Events />
+    <Confirmation/>
   </main>
 </Layout>
