--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,14 +8,13 @@ import ChevronDown from "../icons/Chevron-down.astro";
 </section>
 <style>
     .hero {
-        background: url("/hero.png");
+        background: url("/foto-de-dos.png");
         height: 100vh;
         width: 100vw;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center center;
         background-size: cover;
-        background-color: rgba(88, 57, 11, 0.4);
         background-blend-mode: soft-light;
         display: flex;
         justify-content: center;
