--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -1,6 +1,6 @@
 <style>
   #cards-container {
-    background-color: #FFF;
+    background-color: #fff;
     background-position: center center;
     width: 600px;
     padding: 50px 2px 50px;
@@ -25,31 +25,39 @@
 
   .formula {
     color: #ffffff;
-    border: 2px solid rgb(235, 208, 223);
+    border: 2px solid #dcc8b4;
     border-radius: 30px;
-    transition: 0, 5s;
-    background-color: rgb(236, 204, 214);
-    padding: 10px 20px;
+    transition: 1s;
+    background-color: #dcc8b4;
+    padding: 5px 40px;
     font-size: 20px;
-    font-weight: 200;
+    font-weight: 100;
+    margin: 3px;
+    text-decoration: none;
+    display: inline-block;
   }
 
   .formula:hover {
     background-color: transparent;
+    color: #dfd5db;
   }
 
   p {
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 18px;
     color: rgb(10, 10, 10);
+    margin: 5px;
+    margin-bottom: 20px;
+    font-family: 'Noto Serif Georgian', serif;
+    font-weight: 300;
   }
 
   h1 {
     font-size: 50px;
-    margin-top: 50px;
-    font-weight: 600;
-    margin-bottom: 50px;
-    color: rgb(226, 212, 220);
+    margin-top: 30px;
+    font-weight: 500;
+    margin-bottom: 30px;
+    color: #dcc8b4;
+    font-family: "Montserrat";
   }
 
   main {
@@ -64,14 +72,19 @@
 <main>
   <div id="cards-container">
     <div class="confirmacion">
-      <h1>CAROLA Y SHARIANNY</h1>
+      <h1>Confirma Por Favor</h1>
       <p>
         Espero que seas parte de esta gran celebracion. ¡Confirmanos tu
         asistencia!
       </p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link" target="_blank" class="formula"
-        >Confirmar asistencia</a
+      <a
+        href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link"
+        target="_blank"
+        class="formula">CONFIRMAR ASISTENCIA</a
       >
+      <div class="agendar">
+        <a href="" target="_blank" class="formula">AGENDAR EVENTO</a>
+      </div>
     </div>
   </div>
 </main>
