--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -1,6 +1,6 @@
 <style>
     .main {
-        background: url("/public/imagegift.png");
+        background: url();
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
