--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -61,7 +61,7 @@
   }
 
   main {
-    background: url("/bgConfirmation.jpg");
+    background: url("../public/foto-de-dos.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -80,8 +80,7 @@
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link"
         target="_blank"
-        class="formula">CONFIRMAR ASISTENCIA</a
-      >
+        class="formula">CONFIRMAR ASISTENCIA</a>
       <div class="agendar">
         <a href="" target="_blank" class="formula">AGENDAR EVENTO</a>
       </div>
