--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -1,10 +1,10 @@
 <style>
-    .main {
+    main {
         background: url();
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
-        padding: 45px;
+        padding: 60px 0;
     }
     #container {
         background-color: #fff;
@@ -18,6 +18,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+    p {
+        font-size: 18px;
+        color: rgb(10, 10, 10);
+        margin: 5px;
+        margin-bottom: 20px;
+        font-family: "Noto Serif Georgian", serif;
+        font-weight: 300;
     }
 </style>
 
