--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/Hero.astro";
 import Countdown from "../components/Countdown.astro";
 import Events from "../components/Events.astro";
 import Confirmation from "../components/Confirmation.astro";
+import Gift from "../components/Gift.astro";
 ---
 
 <Layout title="Welcome to Wedding">
@@ -12,5 +13,6 @@ import Confirmation from "../components/Confirmation.astro";
     <Countdown />
     <Events />
     <Confirmation/>
+    <Gift />
   </main>
 </Layout>
