--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -61,7 +61,7 @@
   }
 
   main {
-    background: url("../public/foto-de-dos.png");
+    background: url("/bgConfirmation.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
