--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -1,6 +1,6 @@
 <style>
     main {
-        background: url();
+        background: url("/fondo-papel.png");
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
