--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -3,7 +3,7 @@
     background-color: #fff;
     background-position: center center;
     width: 600px;
-    padding: 50px 2px 50px;
+    padding: 25px 2px 50px;
     height: 200px;
     text-align: center;
     line-height: 30px;
@@ -72,7 +72,7 @@
 <main>
   <div id="cards-container">
     <div class="confirmacion">
-      <h1>Confirma Por Favor</h1>
+      <h1>RSPV</h1>
       <p>
         Espero que seas parte de esta gran celebracion. ¡Confirmanos tu
         asistencia!
