--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -13,16 +13,6 @@
     justify-content: center;
   }
 
-  .imagen {
-    width: 2000px;
-    height: 450px;
-    background-position: center center;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
   .formula {
     color: #ffffff;
     border: 2px solid #dcc8b4;
@@ -30,8 +20,8 @@
     transition: 1s;
     background-color: #dcc8b4;
     padding: 5px 40px;
-    font-size: 20px;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: 450;
     margin: 3px;
     text-decoration: none;
     display: inline-block;
@@ -39,15 +29,14 @@
 
   .formula:hover {
     background-color: transparent;
-    color: #dfd5db;
+    color: #dcc8b4;
   }
 
   p {
-    font-size: 18px;
+    font-size: 19px;
     color: rgb(10, 10, 10);
-    margin: 5px;
     margin-bottom: 20px;
-    font-family: 'Noto Serif Georgian', serif;
+    font-family: "Noto Serif Georgian", serif;
     font-weight: 300;
   }
 
@@ -80,7 +69,8 @@
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link"
         target="_blank"
-        class="formula">CONFIRMAR ASISTENCIA</a>
+        class="formula">CONFIRMAR ASISTENCIA</a
+      >
       <div class="agendar">
         <a href="" target="_blank" class="formula">AGENDAR EVENTO</a>
       </div>
