--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -1,9 +1,6 @@
 <style>
     main {
         background: url("/fondo-papel.png");
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-size: cover;
         padding: 60px 0;
     }
     #container {
@@ -27,11 +24,15 @@
         font-family: "Noto Serif Georgian", serif;
         font-weight: 300;
     }
+    img {
+        width: 80px;
+    }
 </style>
 
 <main>
     <div id="container">
         <div class="gitf">
+            <img src="regalo.svg" />
             <p>
                 Gracias por su cariño, apoyo y presencia en nuestro gran día.
                 Tendrenos un buzón en la recepcion donde podrán depositar su
