--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -34,7 +34,7 @@
 
   p {
     font-size: 19px;
-    color: rgb(10, 10, 10);
+    color: #666666;
     margin-bottom: 20px;
     font-family: "Noto Serif Georgian", serif;
     font-weight: 300;
@@ -69,8 +69,7 @@
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link"
         target="_blank"
-        class="formula">CONFIRMAR ASISTENCIA</a
-      >
+        class="formula">CONFIRMAR ASISTENCIA</a>
       <div class="agendar">
         <a href="" target="_blank" class="formula">AGENDAR EVENTO</a>
       </div>
