--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -7,7 +7,7 @@
         background-color: #fff;
         background-position: center center;
         width: 600px;
-        padding: 50px 2px 50px;
+        padding: 25px 2px 50px;
         height: 200px;
         text-align: center;
         line-height: 30px;
@@ -17,8 +17,8 @@
         justify-content: center;
     }
     p {
-        font-size: 18px;
-        color: rgb(10, 10, 10);
+        font-size: 19px;
+        color: #666666;
         margin: 5px;
         margin-bottom: 20px;
         font-family: "Noto Serif Georgian", serif;
@@ -26,6 +26,25 @@
     }
     img {
         width: 80px;
+        margin-top: 25px;
+        margin-bottom: 5px;
+    }
+    .fact {
+        color: #ffffff;
+        border: 2px solid #dcc8b4;
+        border-radius: 30px;
+        transition: 1s;
+        background-color: #dcc8b4;
+        padding: 5px 40px;
+        font-size: 16px;
+        font-weight: 450;
+        margin: 3px;
+        text-decoration: none;
+        display: inline-block;
+    }
+    .fact:hover {
+        background-color: transparent;
+        color: #dcc8b4;
     }
 </style>
 
@@ -35,10 +54,10 @@
             <img src="regalo.svg" />
             <p>
                 Gracias por su cariño, apoyo y presencia en nuestro gran día.
-                Tendrenos un buzón en la recepcion donde podrán depositar su
-                sobre con el regalo en efectivo. Por favor, no olviden añadir
-                una tarjeta con sus mejores deseos para nuestro matrimonio.
+                Por favor, no olviden añadir una tarjeta con sus mejores deseos
+                para nuestro matrimonio.    
             </p>
+            <a href="" class="fact">VER DATO</a>
         </div>
     </div>
 </main>
