--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Countdown from "../components/Countdown.astro";
 import Events from "../components/Events.astro";
 import Confirmation from "../components/Confirmation.astro";
 import Gift from "../components/Gift.astro";
+import DressCode from "../components/DressCode.astro";
 ---
 
 <Layout title="Welcome to Wedding">
@@ -13,6 +14,7 @@ import Gift from "../components/Gift.astro";
     <Countdown />
     <Events />
     <Confirmation/>
+    <DressCode/>
     <Gift />
   </main>
 </Layout>
