--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,3 +18,27 @@ import DressCode from "../components/DressCode.astro";
     <Gift />
   </main>
 </Layout>
+
+<style is:global>
+  @keyframes fade_in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .fade-in {
+    opacity: 0;
+    transform: translateY(30px);
+    transition:
+      opacity 2s ease-out,
+      transform 2s ease-out;
+  }
+
+  .fade-in.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+</style>
