--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -16,10 +16,10 @@
 
   .formula {
     color: #ffffff;
-    border: 2px solid #dcc8b4;
+    border: 2px solid #e6dbc8;
     border-radius: 30px;
     transition: 1s;
-    background-color: #dcc8b4;
+    background-color: #e6dbc8;
     padding: 5px 40px;
     font-size: small;
     font-weight: 450;
@@ -47,7 +47,7 @@
     font-size: 40px;
     margin: 0;
     font-weight: 500;
-    color: #dcc8b4;
+    color: #e6dbc8;
     font-family: "Montserrat";
   }
 
