--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -26,11 +26,17 @@
     font-weight: 300;
   }
   img {
-    width: 80px;
-    margin-top: 25px;
-    margin-bottom: 5px;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 100%;
+    max-height: 80px;
+    padding: 20px;
   }
-  #btn, .btn {
+  #btn,
+  .btn {
     color: #ffffff;
     border: 2px solid #dcc8b4;
     border-radius: 30px;
@@ -44,8 +50,8 @@
     display: inline-block;
 
     &&:hover {
-        background-color: transparent;
-        color: #dcc8b4;
+      background-color: transparent;
+      color: #dcc8b4;
     }
   }
 
@@ -56,11 +62,11 @@
     border: none;
     text-align: center;
     max-width: 300px;
-    }
+  }
 
-    .gift {
-        padding: 0 10px;
-    }
+  .gift {
+    padding: 0 10px;
+  }
 
   /* SIZE FOR 640px */
   @media (min-width: 640px) {
@@ -68,7 +74,7 @@
       font-size: large;
     }
     .modal {
-        max-width: 500px;
+      max-width: 500px;
     }
   }
 </style>
@@ -76,7 +82,7 @@
 <main class="fade-in">
   <div id="container">
     <div class="gift">
-      <img src="regalo.svg" />
+      <img src="/regalos.png" />
       <p>
         Gracias por su cariño, apoyo y presencia en nuestro gran día. Por favor,
         no olviden añadir una tarjeta con sus mejores deseos para nuestro
@@ -89,7 +95,8 @@
 
 <dialog id="model" class="modal">
   <p>
-    Tendremos un buzón en la recepción donde podran depositar su sobre con el regalo en efectivo
+    Tendremos un buzón en la recepción donde podran depositar su sobre con el
+    regalo en efectivo
   </p>
   <button id="cerrar" class="btn">cerrar</button>
 </dialog>
