--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Events from "../components/Events.astro";
 import Confirmation from "../components/Confirmation.astro";
 import Gift from "../components/Gift.astro";
 import DressCode from "../components/DressCode.astro";
+import Farewell from "../components/Farewell.astro";
 ---
 
 <Layout title="Welcome to Wedding">
@@ -16,6 +17,7 @@ import DressCode from "../components/DressCode.astro";
     <Confirmation />
     <DressCode />
     <Gift />
+    <Farewell />
   </main>
 </Layout>
 
