--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -82,7 +82,7 @@
         no olviden añadir una tarjeta con sus mejores deseos para nuestro
         matrimonio.
       </p>
-      <button id="btn"> VER DATO </button>
+      <button id="btn"> VER DATOS </button>
     </div>
   </div>
 </main>
