--- a/src/components/Farewell.astro
+++ b/src/components/Farewell.astro
@@ -2,7 +2,7 @@
     <div>
         <img class="farewell_img" src="/titulo-portada.png" alt="farewell img"/>
         <p>
-            Gracias por acompañarnos y compartir nuestra felicidad...
+            Gracias por acompañarnos y compartir nuestra felicidad..
         </p>
     </div>
 </section>
