--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -22,7 +22,7 @@ const TIMESTAMP = 1727271000000;
     </div>
   </div>
   <article class="text fade-in">
-    <img class="icon" src="/corazones.png" alt="icono de corazon" />
+    <img class="icon" src="/corazones2.png" alt="icono de corazon" />
     <p>
       Nos conocimos de la manera más inesperada.
       Nos enamoramos cita tras cita, vivimos momentos inolvidables, y ahora ha llegado el día en que daremos el "¡Sí, quiero!".
@@ -61,8 +61,8 @@ const TIMESTAMP = 1727271000000;
 
   span, p {
     font-family: "Times New Roman", Times, serif;
-    font-size: x-small;
-    color: #565656;
+    font-size: 25px;
+    color: #666;
   }
 
   .num {
@@ -70,12 +70,15 @@ const TIMESTAMP = 1727271000000;
   }
 
   .icon {
-    max-width: 60px;
+    max-width: 80px;
+    border-radius: 100%;
   }
   p {
     text-align: center;
     font-family: "Times New Roman", Times, serif;
     font-size: small;
+    margin: 10px;
+    color: #666
   }
   .text {
     max-width: 600px;
@@ -88,7 +91,7 @@ const TIMESTAMP = 1727271000000;
     }
 
     span {
-      font-size: medium;
+      font-size: 25px;
     }
 
     .num {
