--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -1,6 +1,6 @@
 <style>
   main {
-    background: url("/fondo-papel.png");
+    background: url("/fondo-regalos.png");
     padding: 40px;
   }
   #container {
@@ -38,10 +38,10 @@
   #btn,
   .btn {
     color: #ffffff;
-    border: 2px solid #dcc8b4;
+    border: 2px solid #e6dbc8;
     border-radius: 30px;
     transition: 1s;
-    background-color: #dcc8b4;
+    background-color: #e6dbc8;
     padding: 5px 40px;
     font-size: small;
     font-weight: 450;
@@ -51,7 +51,7 @@
 
     &&:hover {
       background-color: transparent;
-      color: #dcc8b4;
+      color: #e6dbc8;
     }
   }
 
