--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -52,7 +52,7 @@
   }
 
   main {
-    background: url("/boda-foto.png");
+    background: url("/reserva.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
