--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -27,7 +27,7 @@ const TIMESTAMP = 1727271000000;
       Nos conocimos de la manera más inesperada.
       Nos enamoramos cita tras cita, vivimos momentos inolvidables, y ahora ha llegado el día en que daremos el "¡Sí, quiero!".
     </p>
-    <span> ¡NOS CASAMOS! <span>
+    <span class="footer"> ¡NOS CASAMOS! <span>
   </article>
 </section>
 
@@ -61,7 +61,7 @@ const TIMESTAMP = 1727271000000;
 
   span, p {
     font-family: "Times New Roman", Times, serif;
-    font-size: 25px;
+    font-size: x-small;
     color: #666;
   }
 
@@ -83,6 +83,9 @@ const TIMESTAMP = 1727271000000;
   .text {
     max-width: 600px;
   }
+  .footer {
+    font-size: large ;
+  }
 
   /* SIZE FOR 640px */
   @media (min-width: 640px) {
@@ -91,7 +94,7 @@ const TIMESTAMP = 1727271000000;
     }
 
     span {
-      font-size: 25px;
+      font-size: medium;
     }
 
     .num {
