--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -23,11 +23,17 @@ import Card from "./Card.astro";
 <style>
         .events {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 10px;
         background: #e6dbc8;
 		padding: 20px;
-        
+    }
+
+    @media (min-width: 640px){
+        .events {
+            flex-direction: row;
+        }
     }
 </style>
