--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Confirmation from "../components/Confirmation.astro";
 import Gift from "../components/Gift.astro";
 import DressCode from "../components/DressCode.astro";
 import Farewell from "../components/Farewell.astro";
+import Songs from "../components/Songs.astro";
 ---
 
 <Layout title="Welcome to Wedding">
@@ -18,6 +19,7 @@ import Farewell from "../components/Farewell.astro";
     <DressCode />
     <Gift />
     <Farewell />
+    <Songs />
   </main>
 </Layout>
 
